2020-10-30  Eduardo Ochs  <eduardoochs@gmail.com>

	* eev-tlinks.el (find-youtubedl-links): rewrote using
	`find-find-links-links-new'. Deleted the sexps with `find-video'
	and `code-video' that would point to a partially downloaded video.
	(ee-youtubedl-dirs): new variable.
	(ee-youtubedl-dir-links): new function.
	(ee-youtubedl-dir2, ee-youtubedl-dir3, ee-youtubedl-dir4):
	deleted.

	* eev-elinks.el (find-eface-links, find-color-links): rewrote
	using `find-find-links-links-new'.

2020-10-27  Eduardo Ochs  <eduardoochs@gmail.com>

	* eev-audiovideo.el (ee-find-mpv-video): use "--start=1:23"
	instead of "--start 1:23".

	* eev-pdflike.el (ee-code-pdfbackend, ee-code-pdftextbackend): add
	the missing backslashes.

2020-10-24  Eduardo Ochs  <eduardoochs@gmail.com>

	* eev-blinks.el (find-man): document an open bug.

2020-10-18  Eduardo Ochs  <eduardoochs@gmail.com>

	* eev-tlinks.el (find-eevvideo-links, code-eevvideo)
	(find-code-eevvideo, ee-code-eevvideo): new functions.

	* eev-intro.el (find-audiovideo-intro): added two new sections:
	"7. `code-psnevideo'" and "7.1. `code-eevvideo'".

2020-10-17  Eduardo Ochs  <eduardoochs@gmail.com>

	* eev-tlinks.el (find-psnevideo-links, ee-psnevideo-links)
	(ee-psnevideo-download-if-needed, ee-psnevideo-download)
	(ee-psnevideo-download0): new functions.

	* eev-audiovideo.el (ee-time-to-youtube-time): new function.

2020-10-16  Eduardo Ochs  <eduardoochs@gmail.com>

	* eev-pdflike.el: Rewrote most of the file to use the cleaner
	`code-*backend*' functions instead of the older
	`code-xxxpdf*-family' functions, that were much harder to
	understand. Also rewrote lots of comments.

	* eev-pdflike.el (ee-fname-page-to-url): new function.
	(ee-find-googlechrome-page): new function.

2020-10-15  Eduardo Ochs  <eduardoochs@gmail.com>

	* eev-pdflike.el (code-pdfbackend, find-code-pdfbackend)
	(ee-code-pdfbackend, code-pdftextbackend)
	(find-code-pdftextbackend, ee-code-pdftextbackend): new functions.
